--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 <body>
 
-    <a href="index.html" class="back-btn">⬅ KEMBALI</a>
+    <a href="http://merrychristmas.wuaze.com/" class="back-btn">⬅ KEMBALI</a>
 
     <div class="video-container">
         
@@ -121,4 +121,5 @@
     </script>
 
 </body>
+
 </html>
