Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 <body>
 
-    <a href="http://merrychristmas.wuaze.com/" class="back-btn">⬅ KEMBALI</a>
+    <a href="http://merrychristmas.wuaze.com/index.html" class="back-btn">⬅ KEMBALI</a>
 
     <div class="video-container">
         
@@ -123,3 +123,4 @@
 </body>
 
 </html>
+
